--- a/public/blog/assets/css/styles.css
+++ b/public/blog/assets/css/styles.css
@@ -6846,3 +6846,13 @@ footer.skin-dark-footer ul.footer-bottom-social li a:hover, footer.skin-dark-foo
 	}
 }
 
+.tel{
+  width:40px;
+  height:40px;
+ margin-bottom: 15px;
+}
+.tel:hover{
+  transition:0.5s;
+    width: 45px;
+    height: 45px;
+}
